# NeuroSync-OS-Sparky

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  database_backup.db  neurons_backup.sql  run_advanced_example.bat  run_advanced_neuron_example.bat  run_example.bat  run_tests.bat  test_api_basic.cpp  test_api_simple.cpp  test_audio.cpp  test_database_compilation.cpp  test_database_comprehensive.cpp  test_db_actual.cpp  test_db_simple.cpp  test_db_standalone.cpp  test_diagnostics_simple.cpp  test_memory_comprehensive.cpp  test_memory_simple.cpp  test_network_simple.cpp  users_backup.csv
docs/: api.md  architecture.md  benchmark_suite.md  config.md  diagnostics.md  documentation_generator.md  event.md  logging.md  network.md  plugin.md  testing_framework.md  tutorial.md  visualization.md
src/: NeuroSync.h
src/advanced_analytics/: AdvancedAnalytics.cpp  AdvancedAnalytics.h  CMakeLists.txt
src/advanced_nn/: AdvancedNeuralNetworks.cpp  AdvancedNeuralNetworks.h  CMakeLists.txt
src/analytics/: CMakeLists.txt  RealTimeAnalytics.cpp  RealTimeAnalytics.h
src/api/: CMakeLists.txt  NeuroAPI.cpp  NeuroAPI.h  NeuroAPIAdvanced.cpp  NeuroAPIAdvanced.h
src/audio/: AudioProcessing.cpp  AudioProcessing.h  CMakeLists.txt
src/benchmark/: BenchmarkSuite.cpp  BenchmarkSuite.h  CMakeLists.txt
src/computer_vision/: ComputerVision.cpp  ComputerVision.h
src/config/: CMakeLists.txt  ConfigurationManager.cpp  ConfigurationManager.h
src/core/: AdvancedScheduler.cpp  AdvancedScheduler.h  CMakeLists.txt  Scheduler.cpp  Scheduler.h
src/core/algorithms/: PriorityBasedScheduling.cpp  PriorityBasedScheduling.h  RoundRobinScheduling.cpp  RoundRobinScheduling.h  WeightedFairQueuingScheduling.cpp  WeightedFairQueuingScheduling.h
src/core/interfaces/: SchedulingAlgorithm.h
src/core/utils/: TaskManager.cpp  TaskManager.h
src/cv/: CMakeLists.txt  ComputerVision.cpp  ComputerVision.h
src/data_processing/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h
src/database/: CMakeLists.txt  DatabaseInterface.cpp  DatabaseInterface.h
src/db/: CMakeLists.txt  DatabaseInterface.cpp  DatabaseInterface.h  test_db.cpp
src/diagnostics/: CMakeLists.txt  Diagnostics.cpp  Diagnostics.h  PerformanceMonitor.cpp  PerformanceMonitor.h  Profiler.cpp  Profiler.h  Visualizer.cpp  Visualizer.h
src/distributed_computing/: CMakeLists.txt  DistributedComputing.h  DistributedManager.cpp
src/docgen/: CMakeLists.txt  DocumentationGenerator.cpp  DocumentationGenerator.h
src/event/: CMakeLists.txt  EventSystem.cpp  EventSystem.h
src/examples/: advanced_analytics_example.cpp  advanced_api_example.cpp  advanced_diagnostics_example.cpp  advanced_memory_example.cpp  advanced_neuron_example.cpp  advanced_nn_example.cpp  advanced_scheduler_example.cpp  advanced_synapse_example.cpp  ai_assistant_example.cpp  analytics_example.cpp  audio_example.cpp  benchmark_example.cpp  comprehensive_example.cpp  config_example.cpp  cv_example.cpp  database_example.cpp  distributed_computing_example.cpp  docgen_example.cpp  event_example.cpp  filesystem_example.cpp  logging_example.cpp  ml_pipeline_example.cpp  network_example.cpp  neural_network_example.cpp  nlp_example.cpp  performance_optimization_example.cpp  plugin_example.cpp  quantum_example.cpp  robotics_example.cpp  scheduler_example.cpp  security_example.cpp  simple_example.cpp  testing_example.cpp  threadpool_example.cpp  threadpool_simple_example.cpp  visualization_example.cpp  weighted_fair_queuing_example.cpp
src/filesystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.h
src/logging/: CMakeLists.txt  LoggingSystem.cpp  LoggingSystem.h
src/memory/: CMakeLists.txt  GarbageCollector.cpp  GarbageCollector.h  MemoryCore.cpp  MemoryCore.h  MemoryPool.cpp  MemoryPool.h
src/ml_pipeline/: CMakeLists.txt  MLPipeline.cpp  MLPipeline.h
src/model_management/: CMakeLists.txt  ModelManager.cpp  ModelManager.h
src/network/: CMakeLists.txt  NetworkCommunication.cpp  NetworkCommunication.h  NetworkManager.cpp  NetworkManager.h  NeuralNetwork.cpp  NeuralNetwork.h
src/network_neural/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h
src/neuron/: CMakeLists.txt  NeuronManager.cpp  NeuronManager.h
src/neuron/lifecycle/: NeuronLifecycleManager.cpp  NeuronLifecycleManager.h
src/neuron/models/: NeuronModel.cpp  NeuronModel.h
src/neuron/utils/: NeuronUtils.cpp  NeuronUtils.h
src/nlp/: CMakeLists.txt  NaturalLanguageProcessing.cpp  NaturalLanguageProcessing.h
src/nlp_advanced/: AdvancedNLP.cpp  AdvancedNLP.h
src/performance_optimization/: CMakeLists.txt  PerformanceOptimizer.cpp  PerformanceOptimizer.h
src/plugin/: CMakeLists.example  CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.h  PluginSystem.cpp  PluginSystem.h
src/quantum/: CMakeLists.txt  QuantumComputing.cpp  QuantumComputing.h
src/robotics/: CMakeLists.txt  RoboticsControl.cpp  RoboticsControl.h
src/security/: CMakeLists.txt  SecurityManager.cpp  SecurityManager.h  SecurityModule.cpp  SecurityModule.h
src/synapse/: CMakeLists.txt  SynapseBus.cpp  SynapseBus.h
src/tests/: comprehensive_test.cpp  debug_hang_test.cpp  debug_test.cpp  exit_test.cpp  final_test.cpp  minimal_hang_test.cpp  minimal_test.cpp  minimal_test_fix.cpp  minimal_test_no_printf.cpp  neurosync_exit_test.cpp  simple_message_test.cpp  simple_test.cpp  test_advanced_analytics.cpp  test_advanced_nn.cpp  test_analytics.cpp  test_api.cpp  test_audio.cpp  test_benchmark_suite.cpp  test_config_manager.cpp  test_cv.cpp  test_database.cpp  test_diagnostics.cpp  test_distributed_computing.cpp  test_docgen.cpp  test_event_system.cpp  test_filesystem.cpp  test_logging_system.cpp  test_memory.cpp  test_ml_pipeline.cpp  test_network.cpp  test_neurosync.cpp  test_nlp.cpp  test_performance_optimization.cpp  test_plugin_system.cpp  test_robotics.cpp  test_scheduler.cpp  test_security.cpp  test_testing_framework.cpp  test_threadpool.cpp  test_threadpool_system.cpp  (+2 more)
src/threadpool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
src/visualization/: CMakeLists.txt  VisualizationModule.cpp  VisualizationModule.h
(+4 files in other folders)
